--- a/HRate/Views/HelloWorld/Index.cshtml
+++ b/HRate/Views/HelloWorld/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
-    ViewData["Title"] = "Pacients List";
+    ViewData["Title"] = "Movie List";
 }
 
-<h2>Pacients List</h2>
+<h2>Movie List</h2>
 
 <p>Hello from our View Template!</p>
